[package]
name = "sted"
version = "0.1.0"
authors = ["David Vázquez Púa <davazp@gmail.com>"]
edition = "2018"
homepage = "https://github.com/davazp/sted"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.16.0"
signal-hook = "0.1.12"