[package]
name = "sted"
version = "0.1.0"
description = "An educational text editor written in Rust."
authors = ["David Vázquez Púa <davazp@gmail.com>"]
edition = "2018"
homepage = "https://github.com/davazp/sted"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.16.0"
signal-hook = "0.1.12"
clap = "2.33.0"