[package]
name = "rile"
version = "0.1.0"
description = "An educational text editor written in Rust."
authors = ["David Vázquez Púa <davazp@gmail.com>"]
edition = "2018"
homepage = "https://github.com/davazp/rile"
default-run = "rile"

[features]
# Slow down the terminal so we can better see the effects of rendering the editor.
debug_slow_term = []

[dependencies]
nix = "0.16.0"
signal-hook = "0.1.12"
clap = "2.33.0"